--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <meta name="color-scheme" content="dark light" >
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
-    <link rel="icon" href="./images/favicon.ico" sizes="any" >
-    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" >
-    <link rel="stylesheet" href="./fonts/fonts.css" >
-    <link rel="stylesheet" href="./styles/globals.css" >
-    <link rel="stylesheet" href="./styles/variables.css" >
-    <link rel="stylesheet" href="./styles/style.css" >
-    <link rel="stylesheet" href="./styles/dark.css" >
-    <link rel="stylesheet" href="./styles/light.css" >
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
     <script src="./scripts/script.js"></script>
   </head>
 
   <body class="page">
     <header class="header decorated-zone">
-      <div class="record" aria-hidden="true"></div>
+      <div class="decorated__corner" aria-hidden="true"></div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -46,31 +46,34 @@
           </li>
         </ul>
       </nav>
-      <section class="header__section">
+      <div class="header__section">
         <h1 class="header__title">no focus</h1>
-        <h3 class="header__subtitle">
+        <h2 class="header__subtitle">
           Что делать, когда не можешь делать ничего<br />
           Или почему нам так сложно сконцентрироваться, особенно когда очень
           надо
-        </h3>
-      </section>
+        </h2>
+      </div>
     </header>
     <main class="main">
-      <section class="main__article">
-        <h3 class="section_title">Почему сосредоточиться так сложно</h3>
-        <h4 class="section_subtitle">Многозадачность</h4>
+      <section class="main__section">
+        <h2 class="main_section_title">Почему сосредоточиться так сложно</h2>
+        <h3 class="section_subtitle">Многозадачность</h3>
         <p class="main__paragraph">
           Особенно сложно сосредоточиться, когда задач много и все они — важные.
           Где же легендарная многозадачность, когда она так нужна вам (и всем
           нанимающим менеджерам этого мира)? А дело в том, что её просто не
           существует. Исследователи
-          <a href="#0" class="link__style">выяснили</a>, что мозгу тяжело
-          концентрироваться даже на двух делах одновременно. А когда в поле
-          внимания попадает несколько важных задач, организм паникует и выделяет
-          кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем
-          невнимательно: ошибаемся и быстро устаём.
+          <a
+            href="https://dana.org/article/multicosts-of-multitasking/"
+            class="link__style"
+            >выяснили</a
+          >, что мозгу тяжело концентрироваться даже на двух делах одновременно.
+          А когда в поле внимания попадает несколько важных задач, организм
+          паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за
+          этого мы работаем невнимательно: ошибаемся и быстро устаём.
         </p>
-        <h4 class="section_subtitle">Дофамин</h4>
+        <h3 class="section_subtitle">Дофамин</h3>
         <p class="main__paragraph">
           С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
           невозможности сосредоточиться замешана и полная противоположность
@@ -82,66 +85,54 @@
           получаешь.
         </p>
       </section>
-      <section class="main__article main__section-second">
-        <h3 class="section_title main__section-title-second">
+      <section class="main__section main__section-flexible">
+        <h2 class="main_section_title main__section-title-flexible">
           Что снижает концентрацию внимания?
-        </h3>
-        <h4
-          class="section_subtitle main__section-title-second main__section-subtitle-first"
-        >
-          Многозадачность
-        </h4>
-        <p
-          class="main__paragraph main__section-title-second main__section-paragraph-first"
-        >
-          Как концентрация может снижаться из-за… концентрации? Любая стрессовая
-          ситуация (и резко меняющийся мир в целом) заставляет наш мозг
-          постоянно «сканировать» окружающую среду на предмет опасности.
-          Например, читать новости вместо работы. Но быть собранными всё время —
-          невозможно. Концентрация — мышца, и она может не выдержать, если не
-          давать ей отдохнуть.
-        </p>
-        <h4
-          class="section_subtitle main__section-title-second main__section-subtitle-second"
-        >
-          Еда
-        </h4>
-        <p
-          class="main__paragraph main__section-title-second main__section-paragraph-second"
-        >
-          «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
-          доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта
-          энергия также быстро, как и приходит. А мы в результате попадаем на
-          «углеводные качели»: как только действие «быстрых углеводов»
-          заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше
-          быстрых углеводов.
-        </p>
-        <h4
-          class="section_subtitle main__section-title-second main__section-subtitle-third"
-        >
-          Гаджеты
-        </h4>
-        <p
-          class="main__paragraph main__section-title-second main__section-paragraph-third"
-        >
-          Да-да, это та самая ситуация, когда на экране ноутбука — код, в
-          наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
-          утятами. В результате мозг пытается переключиться с одной задачи на
-          другую — и просто не может. А чтобы вернуться к состоянию полной
-          концентрации, человеку в среднем нужно 20 минут. Вот и получается, что
-          чем больше времени мы проводим в гаджетах, тем больше времени затем
-          нужно, чтобы вернуться к работе.
-        </p>
+        </h2>
+        <div class="main__section-container">
+          <h3 class="section_subtitle">Многозадачность</h3>
+          <p class="main__paragraph">
+            Как концентрация может снижаться из-за… концентрации? Любая
+            стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
+            мозг постоянно «сканировать» окружающую среду на предмет опасности.
+            Например, читать новости вместо работы. Но быть собранными всё время
+            — невозможно. Концентрация — мышца, и она может не выдержать, если
+            не давать ей отдохнуть.
+          </p>
+        </div>
+        <div class="main__section-container">
+          <h3 class="section_subtitle">Еда</h3>
+          <p class="main__paragraph">
+            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+            доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+            эта энергия также быстро, как и приходит. А мы в результате попадаем
+            на «углеводные качели»: как только действие «быстрых углеводов»
+            заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
+            больше быстрых углеводов.
+          </p>
+        </div>
+        <div class="main__section-container">
+          <h3 class="section_subtitle">Гаджеты</h3>
+          <p class="main__paragraph">
+            Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+            наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
+            утятами. В результате мозг пытается переключиться с одной задачи на
+            другую — и просто не может. А чтобы вернуться к состоянию полной
+            концентрации, человеку в среднем нужно 20 минут. Вот и получается,
+            что чем больше времени мы проводим в гаджетах, тем больше времени
+            затем нужно, чтобы вернуться к работе.
+          </p>
+        </div>
       </section>
-      <section class="main__article">
-        <h3 class="section_title">
+      <section class="main__section">
+        <h2 class="main_section_title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
-        </h3>
-        <h4 class="section_subtitle section_subtitle-additional-indentation">
+        </h2>
+        <h3 class="section_subtitle section_subtitle-additional-indentation">
           5 простых (на самом деле не очень) советов
-        </h4>
-        <h4 class="section_subtitle">Представьте небо и облака</h4>
+        </h3>
+        <h3 class="section_subtitle">Представьте небо и облака</h3>
         <p class="main__paragraph">
           Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
           успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
@@ -152,31 +143,34 @@
           настоящий момент, а не волноваться о потенциальных проблемах из
           будущего.
         </p>
-        <h4 class="section_subtitle">Включите музыку</h4>
+        <h3 class="section_subtitle">Включите музыку</h3>
         <p class="main__paragraph">
           Но не любую, и не любимую. Любимая может быть связана с сильными
           положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт
           тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать
           включить плейлист с «белым шумом» или нейромузыкой.
         </p>
-        <h4 class="section_subtitle">Прогуляйтесь</h4>
+        <h3 class="section_subtitle">Прогуляйтесь</h3>
         <p class="main__paragraph">
           Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-          <a href="#0" class="link__style">показал</a>, что созерцание природы
-          повышает концентрацию, в то время как после просмотра городских
-          пейзажей она наоборот понижается. Можно совместить прогулку с
-          физическими упражнениями или бегом — так в мозг поступит ещё больше
-          кислорода и он будет лучше работать. Но и простая двадцатиминутная
-          прогулка — тоже отличный вариант.
+          <a
+            href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+            class="link__style"
+            >показал</a
+          >, что созерцание природы повышает концентрацию, в то время как после
+          просмотра городских пейзажей она наоборот понижается. Можно совместить
+          прогулку с физическими упражнениями или бегом — так в мозг поступит
+          ещё больше кислорода и он будет лучше работать. Но и простая
+          двадцатиминутная прогулка — тоже отличный вариант.
         </p>
-        <h4 class="section_subtitle">Хорошо ешьте</h4>
+        <h3 class="section_subtitle">Хорошо ешьте</h3>
         <p class="main__paragraph">
           Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые
           препятствуют резким скачкам сахара в крови. Например, с высоким
           содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль),
           коричневый рис, хлеб из цельнозерновой пшеницы.
         </p>
-        <h4 class="section_subtitle">Читайте</h4>
+        <h3 class="section_subtitle">Читайте</h3>
         <p class="main__paragraph">
           Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
           прочитать пост в соцсети, достаточно нескольких минут или даже секунд.
@@ -185,7 +179,7 @@
         </p>
       </section>
       <section class="main__gallery">
-        <h3 class="section_subtitle gallery">А можно в картинках?</h3>
+        <h2 class="section_subtitle gallery">А можно в картинках?</h2>
         <img
           class="gallery_image sunset"
           src="./images/sunset.png"
@@ -219,7 +213,8 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <h2 class="footer__title">focus</h2>
+      <div class="decorated__corner" aria-hidden="true"></div>
+      <h4 class="footer__title">focus</h4>
     </footer>
   </body>
 </html>
