--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             что чем больше времени мы проводим в гаджетах, тем больше времени
             затем нужно, чтобы вернуться к работе.
           </p>
-        </div>
+        </div>                                         
       </section>
       <section class="main__section">
         <h2 class="main_section_title">
@@ -132,7 +132,7 @@
         <h3 class="section_subtitle section_subtitle-additional-indentation">
           5 простых (на самом деле не очень) советов
         </h3>
-        <h3 class="section_subtitle">Представьте небо и облака</h3>
+        <h4 class="section_subtitle section__subtitle-font">Представьте небо и облака</h4>
         <p class="main__paragraph">
           Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
           успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
@@ -143,14 +143,14 @@
           настоящий момент, а не волноваться о потенциальных проблемах из
           будущего.
         </p>
-        <h3 class="section_subtitle">Включите музыку</h3>
+        <h4 class="section_subtitle section__subtitle-font">Включите музыку</h4>
         <p class="main__paragraph">
           Но не любую, и не любимую. Любимая может быть связана с сильными
           положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт
           тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать
           включить плейлист с «белым шумом» или нейромузыкой.
         </p>
-        <h3 class="section_subtitle">Прогуляйтесь</h3>
+        <h4 class="section_subtitle section__subtitle-font">Прогуляйтесь</h4>
         <p class="main__paragraph">
           Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
           <a
@@ -163,14 +163,14 @@
           ещё больше кислорода и он будет лучше работать. Но и простая
           двадцатиминутная прогулка — тоже отличный вариант.
         </p>
-        <h3 class="section_subtitle">Хорошо ешьте</h3>
+        <h4 class="section_subtitle section__subtitle-font">Хорошо ешьте</h4>
         <p class="main__paragraph">
           Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые
           препятствуют резким скачкам сахара в крови. Например, с высоким
           содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль),
           коричневый рис, хлеб из цельнозерновой пшеницы.
         </p>
-        <h3 class="section_subtitle">Читайте</h3>
+        <h4 class="section_subtitle section__subtitle-font">Читайте</h4>
         <p class="main__paragraph">
           Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
           прочитать пост в соцсети, достаточно нескольких минут или даже секунд.
